--- a/DeciToBin/DeciToBin.csproj
+++ b/DeciToBin/DeciToBin.csproj
@@ -67,6 +67,9 @@
     <Compile Include="Window4.xaml.cs">
       <DependentUpon>Window4.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Window5.xaml.cs">
+      <DependentUpon>Window5.xaml</DependentUpon>
+    </Compile>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -93,6 +96,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Window4.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Window5.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -132,9 +139,12 @@
     <Resource Include="2-removebg-preview.png" />
     <Resource Include="arrow pic.png" />
     <Resource Include="arrow_pic.png" />
-    <Content Include="wrong.wav" />
     <Resource Include="binary bg.png" />
+  </ItemGroup>
+  <ItemGroup>
     <Content Include="correct.wav" />
+    <Resource Include="howtoplaygamepng.png" />
+    <Content Include="wrong.wav" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
